# keyrings.artifacts

./: .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
recipe/keyrings.artifacts/: meta.yaml
src/keyrings_artifacts/: __init__.py  _version.py  artifacts.py  crypt_file.py  logging_config.py  plugin.py  provider.py  support.py
tests/: test_artifacts.py  test_crypt_file.py
